# rcengine

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
.github/workflows/: cmake.yml
RcEditor/: CMakeLists.txt
RcEditor/Assets/Config/: imgui.ini
RcEditor/Assets/Game/Textures/: TILESET-LICENCE.txt
RcEditor/Assets/Shaders/: FlatColor.glsl  TextureCombined.glsl
RcEditor/Assets/Shaders/Metal/: TextureVertex.metal
RcEditor/Assets/Shaders/SPIRV/: Fragment.spv  Vertex.spv
RcEditor/src/: EditorLayer.cpp  EditorLayer.h  ViewPanel.cpp  ViewPanel.h
RcEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
RcEngine/: CMakeLists.txt  macros.cmake  sndfile.cmake
RcEngine/src/: RcEngine.h  rcpch.cpp  rcpch.h
RcEngine/src/Platform/: MacUtils.h  processordetection.h
RcEngine/src/Platform/Mac/: MacInput.cpp  MacInput.h  MacUtils.h  MacUtils.mm  MacWindow.cpp  MacWindow.h  processordetection.cpp
RcEngine/src/Platform/Metal/: MetalBuffer.h  MetalBuffer.mm  MetalImplementation.h  MetalResource.h  MetalShader.cpp  MetalShader.h
RcEngine/src/Platform/Metal/metal-cpp/Metal/: MTLAccelerationStructure.hpp  MTLAccelerationStructureCommandEncoder.hpp  MTLArgument.hpp  MTLArgumentEncoder.hpp  MTLBinaryArchive.hpp  MTLBlitCommandEncoder.hpp  MTLBlitPass.hpp  MTLBuffer.hpp  MTLCaptureManager.hpp  MTLCommandBuffer.hpp  MTLCommandEncoder.hpp  MTLCommandQueue.hpp  MTLComputeCommandEncoder.hpp  MTLComputePass.hpp  MTLComputePipeline.hpp  MTLCounters.hpp  MTLDepthStencil.hpp  MTLDevice.hpp  MTLDrawable.hpp  MTLDynamicLibrary.hpp  MTLEvent.hpp  MTLFence.hpp  MTLFunctionConstantValues.hpp  MTLFunctionDescriptor.hpp  MTLFunctionHandle.hpp  MTLFunctionLog.hpp  MTLFunctionStitching.hpp  MTLHeap.hpp  MTLIndirectCommandBuffer.hpp  MTLIndirectCommandEncoder.hpp  MTLIntersectionFunctionTable.hpp  MTLLibrary.hpp  MTLLinkedFunctions.hpp  MTLParallelRenderCommandEncoder.hpp  MTLPipeline.hpp  MTLPixelFormat.hpp  MTLRasterizationRate.hpp  MTLRenderCommandEncoder.hpp  MTLRenderPass.hpp  MTLRenderPipeline.hpp  (+9 more)
RcEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLUtils.cpp  OpenGLUtils.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
RcEngine/src/Platform/Vulkan/: VKBuffer.cpp  VKBuffer.h  VKTexture.cpp  VKTexture.h  VKUniformBuffer.cpp  VKUniformBuffer.h  VKUtils.cpp  VKUtils.h
RcEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h  processordetection.cpp
RcEngine/src/RcEngine/: EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h  keycodes.h
RcEngine/src/RcEngine/Core/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h  keycodes.h
RcEngine/src/RcEngine/Debug/: Instrumentor.h
RcEngine/src/RcEngine/Editor/: EditorConsolePanel.h
RcEngine/src/RcEngine/Editor/EditorConsole/: EditorConsoleSink.h
RcEngine/src/RcEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
RcEngine/src/RcEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
RcEngine/src/RcEngine/Lua/: luastate.cpp  luastate.h  luautil.cpp  luautil.h
RcEngine/src/RcEngine/Math/: Math.cpp  Math.h
RcEngine/src/RcEngine/Network/: Network.h
RcEngine/src/RcEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  IsoCameraController.cpp  IsoCameraController.h  MeshLoader.cpp  MeshLoader.h  OrthoCamera.cpp  OrthoCamera.h  OrthoCameraController.cpp  OrthoCameraController.h  ProjectionCamera.cpp  ProjectionCamera.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
RcEngine/src/RcEngine/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
RcEngine/src/RcEngine/Sound/: SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h
RcEngine/src/RcEngine/Utils/: PlatformUtils.h  Util.h  Utils.cpp  Utils.h
RcGame/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h  RcApp.cpp  RcGame2D.cpp  RcGame2D.h
RcGame/Assets/: FlatColorShader.glsl  TextureShaderFrag.glsl
RcGame/Assets/Game/Textures/: TILESET-LICENCE.txt
RcGame/Assets/Shaders/: CircleCombined.glsl  FlatColorFrag.glsl  FragShader.glsl  MeshCombined.glsl  TextureCombined.glsl  TextureShader.glsl  VertShader.glsl
RcGame/Assets/Shaders/Metal/: TextureFragment.metal
RcGame/Assets/Shaders/SPIRV/: TextureShader.spv
RcGame/Assets/Shaders/Vulkan/: TextureFragment.frag  TextureVertex.vert
RcGame/media/: AppImage.icns
RcGame/src/: EditorLayer.cpp  EditorLayer.h  RcEditorApp.cpp
RcGame/src/Panels/: SpikeGraphPanel.cpp  SpikeGraphPanel.h
RcNetwork/: CMakeLists.txt  Cargo.toml
scripts/: generate-VSproj.bat  generate-cmake.bat  generate-cmake.sh  generate-xcode.sh
scripts/jenkins/: jenkins-cmake.sh
